Fix state label align in integration modal

--- a/app/assets/stylesheets/admin/styles/plugins/_jquery_ui.scss
+++ b/app/assets/stylesheets/admin/styles/plugins/_jquery_ui.scss
@@ -153,6 +153,7 @@
   label {
     display: block;
     color: lighten($color-body-text, 15);
+    text-align: left;
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
